--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "classnames": "^2.2.3",
     "director": "^1.2.8",
     "json-server": "^0.8.8",
+    "lodash": "^4.6.1",
     "mobx": "^2.0.0",
     "mobx-react": "^3.0.0",
     "mobx-react-devtools": "^4.0.0",
