Fix concurrency issues

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "mobx": "^2.0.0",
     "mobx-react": "^3.0.0",
     "mobx-react-devtools": "^4.0.0",
+    "promise.prototype.finally": "^1.0.1",
     "react": "^0.14.6",
     "react-addons-css-transition-group": "^0.14.7",
     "react-dom": "^0.14.0",
